--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 
 dependencies:
 
-  logging: '>=0.11.3 <1.0.0'
+  logging: '>=1.0.0 <1.1.0' #~ '>=0.11.3 <1.0.0'
   intl: '>=0.15.2 <1.0.0'
 
   ansicolor: ^1.0.0
