--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   logging: '>=1.0.0 <1.1.0' #~ '>=0.11.3 <1.0.0'
   intl: '>=0.15.2 <1.0.0'
 
-  ansicolor: ^1.0.0
+  ansicolor: ^2.0.1 #~ ^1.0.0
 
 dev_dependencies:
   test: any
